--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,12 @@
 .App {
   text-align: center;
 }
+button{
+height: 40px;
+min-width: 60px;
+}
 
-.App-header {
+div.App {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -14,6 +18,7 @@
 }
 table{
 width: 100%;
+min-width: 600px;
 }
 .column_userId,.column_id,.column_button{
   width: 5%;
@@ -24,8 +29,6 @@ width: 100%;
 .column_body{
   width: 55%;
 }
-
-
 .App-link {
   color: #61dafb;
 }
